# first_k-follow_k

./: LICENSE  README.md
src/: BitSet.cpp  BitSet.h  CMakeLists.txt  GramNames.cpp  GramNames.h  GramSource.cpp  GramSource.h  GramSourceSimple.cpp  GramSourceSimple.h  Grammar.cpp  Grammar.h  IGrammar.h  Rules.cpp  Rules.h  TBitSet.cpp  TBitSet.h  TTokenSet.cpp  TTokenSet.h  TokenSet.cpp  TokenSet.h  main.cpp
toIdents/: CMakeLists.txt  main.cpp
